# dci-core-stiac

./: CMakeLists.txt
include/dci/: stiac.hpp
include/dci/stiac/: api.hpp  exceptionSerializerRegistrator.hpp  exceptionSerializersRegistry.hpp  interfaceLinksRegistry.hpp  link.hpp  serialization.hpp  smallIntegral.hpp
include/dci/stiac/link/: base.hpp  base.ipp  future.hpp  future.ipp  hub4Link.hpp  hub4Sink.hpp  hub4Source.hpp  id.hpp  impl.hpp  interfaceBase.hpp  interfaceBase.ipp  methodId.hpp  promise.hpp  promise.ipp  serialization.hpp  sink.hpp  sink.ipp  source.hpp  source.ipp
include/dci/stiac/link/serialization/: future.hpp  interface.hpp  promise.hpp
include/dci/stiac/link/source/: fail.hpp
include/dci/stiac/serialization/: arch.hpp  arch.ipp  array.hpp  bytes.hpp  clid.hpp  enum.hpp  exception.hpp  exceptionPtr.hpp  fixEndian.hpp  integral.hpp  list.hpp  map.hpp  none.hpp  opt.hpp  ptr.hpp  real.hpp  set.hpp  smallSigned.hpp  smallUnsigned.hpp  stdString.hpp  stdVariant.hpp  stdVector.hpp  string.hpp  struct.hpp  tuid.hpp  tuple.hpp  variant.hpp
src/stiac/: exceptionSerializersRegistry.cpp  interfaceLinksRegistry.cpp
src/stiac/link/: sink.cpp  source.cpp
src/stiac/link/impl/: sink.cpp  sink.hpp  source.cpp  source.hpp
src/stiac/link/source/: fail.cpp
src/stiac/link/source/impl/: fail.cpp  (+1 more)
test/stiac/serialization/: array.cpp  bytes.cpp  enum.cpp  exception.cpp  integral.cpp  list.cpp  map.cpp  opt.cpp  ptr.cpp  real.cpp  set.cpp  string.cpp  struct.cpp  tuid.cpp  tuple.cpp  variant.cpp
test/stiac/serialization/utils/: hereThere.hpp
